@@ -22,7 +22,7 @@ It shows pictures from:
 
 ** Recommends
 
-- simplejson: for flickr and Tumblr plugins
+- simplejson: for Flickr and Tumblr plugins
 - feedparser: for RSS plugin
 - gnome-python-desktop (gnomekeyring): for Picasa Web plugin
 
@@ -36,13 +36,6 @@ You can install with the setup script.
 Or, you can launch without installation. (Some functions are restricted.)
 
   ./gphotoframe 
-
-* Configuration
-
-You can change the Photo Frame size:
-
-  gconftool-2 --type int --set /apps/gphotoframe/max_width 400 
-  gconftool-2 --type int --set /apps/gphotoframe/max_height 300 
 
 * Contact
 
