@@ -1,3 +1,8 @@
+2010-01-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* preferences.py, gphotoframe.glade: Added GUI for preferences of
+	  max_width and max_height.
+
 2010-01-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* preferences.py, photoliststore.py, gphotoframe.glade: Added new
